--- a/02-bases/src/app/components/shared/navbar/navbar.html
+++ b/02-bases/src/app/components/shared/navbar/navbar.html
@@ -1,5 +1,5 @@
 <style>
-  nav{
+  nav {
     display: flex;
     justify-content: space-around;
     background-color: #212121;
@@ -11,10 +11,22 @@
     color: white;
     text-decoration: none;
   }
+
+  nav a.active {
+    color: red;
+    text-decoration: underline;
+  }
 </style>
 
 <nav>
-  <a routerLink="/">Contador</a>
-  <a [routerLink]="['/hero']">Hero</a>
+  <a
+    routerLink="/"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{exact: true}"
+  >
+    Contador
+  </a>
+  <a [routerLink]="['/hero']" [routerLinkActive]="'active'">Hero</a>
+  <a [routerLink]="['/dragonball']" [routerLinkActive]="'active'">DragonBall</a>
   <!-- OTROS -->
 </nav>
