--- a/02-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/02-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -1,1 +1,25 @@
-<p>dragonball-page.component works!</p>
+<h1>DragonBall Page</h1>
+<hr>
+<section class="row">
+  <div class="col-12 col-sm-6">
+    <h3>Agregar:</h3>
+    <input type="text" class="form-control" placeholder="Nombre">
+    <input type="number" class="form-control mt-2" placeholder="Poder">
+    <button class="mt-2 btn btn-primary">
+      Agregar
+    </button>
+  </div>
+
+  <div class="col-12 col-sm-6">
+    <h3>Listado</h3>
+    <ul>
+      @for (character of characters(); track character.id; let idx = $index) {
+        <li>
+          <span>{{idx + 1}} - {{character.name}}</span>
+          <strong class="text-danger"> ({{character.power}}) </strong>
+        </li>
+      }
+    </ul>
+
+  </div>
+</section>
