--- a/02-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/02-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -11,13 +11,21 @@
   </div>
 
   <div class="col-12 col-sm-6">
-    <h3>Listado</h3>
+    <h3>Listado Fuertes</h3>
     <ul>
       @for (character of characters(); track character.id; let idx = $index) {
-        <li>
-          <span>{{idx + 1}} - {{character.name}}</span>
-          <strong class="text-danger"> ({{character.power}}) </strong>
-        </li>
+        @if(character.power > 500){
+          <li>
+            <span>{{idx + 1}} - {{character.name}}</span>
+            <strong
+            [class.text-danger]="character.power > 9000"
+            [class.text-primary]="character.power < 9000"
+            > ({{character.power}}) </strong>
+            <!-- [ngClass]="powerClasses()" -->
+          </li>
+        }@else {
+          <li><strong>Aqui no vale la pena ver nada</strong></li>
+        }
       }
     </ul>
 
