--- a/02-bases/src/app/components/shared/navbar/navbar.html
+++ b/02-bases/src/app/components/shared/navbar/navbar.html
@@ -28,5 +28,6 @@
   </a>
   <a [routerLink]="['/hero']" [routerLinkActive]="'active'">Hero</a>
   <a [routerLink]="['/dragonball']" [routerLinkActive]="'active'">DragonBall</a>
+  <a routerLink='/dragonball-super' routerLinkActive='active'>DragonBall Super</a>
   <!-- OTROS -->
 </nav>
