feat(dragonball): implement character addition and listing functionality

--- a/02-bases/src/app/pages/dragonball-super/dragonball-super-page.component.html
+++ b/02-bases/src/app/pages/dragonball-super/dragonball-super-page.component.html
@@ -2,52 +2,20 @@
 <hr>
 <section class="row">
   <div class="col-12 col-sm-6">
-    <h3>Agregar:{{name()}}</h3>
-    <input
-    type="text"
-    class="form-control"
-    placeholder="Nombre"
-    [value]="name()"
-    (change)="name.set(txtName.value)"
-    (input)="name.set(txtName.value)"
-    #txtName
-    >
-    <h3>{{power()}}</h3>
-    <input
-      type="number"
-      class="form-control mt-2"
-      placeholder="Poder"
-      [value]="power()"
-      (change)="power.set(+txtPower.value)"
-      (input)="power.set(+txtPower.value)"
-      #txtPower
-    >
-    <button
-      class="mt-2 btn btn-primary"
-      (click)="addCharacter()"
-    >
-      Agregar
-    </button>
+    <dragonball-character-add
+      (newCharacter)="dragonballService.addCharacter($event)"
+    />
+    <!-- dragonball-character-add -->
+     <!-- AQUI -->
+
   </div>
 
   <div class="col-12 col-sm-6">
-    <h3>Listado Fuertes</h3>
-    <ul>
-      @for (character of characters(); track character.id; let idx = $index) {
-        @if(character.power > 500){
-          <li>
-            <span>{{idx + 1}} - {{character.name}}</span>
-            <strong
-            [class.text-danger]="character.power > 9000"
-            [class.text-primary]="character.power < 9000"
-            > ({{character.power}}) </strong>
-            <!-- [ngClass]="powerClasses()" -->
-          </li>
-        }@else {
-          <li><strong>Aqui no vale la pena ver nada</strong></li>
-        }
-      }
-    </ul>
+    <dragonball-character-list
+    [characters]="dragonballService.characters()"
+    listName="Listado de Personajes"
+    />
+
 
   </div>
 </section>
